--- a/style.css
+++ b/style.css
@@ -34,7 +34,9 @@ a {
     font-weight: bold;
     text-transform: uppercase;
 }
-
+.active-link:link {
+    color: blueviolet;
+}
     .li-list:hover {
         color: #ccc;
         background-color: antiquewhite;
@@ -42,13 +44,11 @@ a {
         border-radius: 30%;
     }
 
-    .li-list:visited {
-        color: blueviolet;
+    .active-link:visited {
+        color: coral;
     }
 
-    .li-list:link {
-        color: coral
-    }
+  
 /*navigazione*/
 .nav {
     z-index: 1;
